# agri_dash

./: README.md  dashboard_agri.py  dashboard_agri_report.py  dashboard_disaster.py  dashboard_nasa.py  data_inspection.txt  debug_agri_data.py  debug_agri_no_pandas.py  eda.ipynb  inspect_data.py  main.py  pyproject.toml  test_dashboard_logic.py  test_dashboard_logic_no_pandas.py  test_dashboards.py  test_verify.py  verify_debug.py  verify_pkg.py
data/: cities_latlon.csv  disaster-in-vietnam_1900-to-2024.xlsx  luong_thuc_cut.csv
