[project]
name = "agri-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
]
